# LinkHub

./: .gitignore  README.md
.claude/: settings.json
android/: .gitignore  gradlew.bat  keystore.properties  settings.gradle.kts
android/app/: build.gradle.kts  linkhub-release.jks  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/linkhub/app/: LinkHubApp.kt  MainActivity.kt
android/app/src/main/java/com/linkhub/app/bridge/: RustBridge.kt
android/app/src/main/java/com/linkhub/app/service/: LinkHubService.kt
android/app/src/main/java/com/linkhub/app/ui/: AndroidDiscovery.kt  AndroidHistory.kt  AndroidNetworkHints.kt  AndroidReceivedFiles.kt  AndroidServiceStatus.kt  AndroidStorage.kt  AndroidTransferNotifications.kt  AndroidWebRtcConfig.kt  DevicesScreen.kt  HistoryScreen.kt  PairScreen.kt  SendScreen.kt  ServiceScreen.kt
android/app/src/main/res/values/: themes.xml
core-rs/: Cargo.toml
core-rs/src/: ble.rs  crypto.rs  device.rs  discovery.rs  gossip.rs  identity.rs  ios_bridge.rs  jni_bridge.rs  lib.rs  main.rs  mdns_runtime.rs  media_sync.rs  net.rs  nfc.rs  offline_queue.rs  presence.rs  relay.rs  routing.rs  transport.rs  webrtc.rs
core-rs/src/identity/: device_identity.rs  onion.rs  pairing.rs  secure_store.rs  trust_store.rs
core-rs/src/net/: ack.rs  auth_listener.rs  auth_session.rs  connection_plan.rs  file_transfer.rs  protocol.rs  session.rs  signaling_client.rs  signaling_signed.rs  signaling_supervisor.rs  tor_transport.rs  webrtc_session.rs  webrtc_transport.rs
core-rs/tests/: authenticated_cli_e2e.rs  e2e.rs  signaling_e2e.rs  webrtc_cli_e2e.rs  webrtc_e2e.rs  webrtc_turn_e2e.rs
desktop/src/: index.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop/src/css/: style.css
desktop/src/js/: app.js  devices.js  history.js  pairing.js  send.js  service.js
docs/: README.md  产品需求.md  开发路线图.md  技术架构.md  环境部署.md  真机测试指南.md  项目总览报告.md  项目状态.md
docs/ai-handoff/: README.md
docs/ai-handoff/claude-to-codex/: decisions.md  known-risks.md  latest.md
docs/ai-handoff/codex-to-claude/: decisions.md  known-risks.md  latest.md
docs/ai-handoff/shared/: current-branch.md  handoff-clock.md  next-claude-task-b.md  validation-log.md
docs/ai-handoff/worklog/: claude.md  codex.md
docs/archive/: Android闪退修复交接.md  需求澄清.md
docs/spec/: 产品需求.md  开发路线图.md  环境部署.md  真机测试指南.md  设计-i2p-与-torrent-传输.md  设计-iOS-端.md  设计-tor-onion-传输.md  设计-跨网络传输-webrtc.md  项目总览报告.md  项目状态.md
ios/: README.md  project.yml
ios/LinkHub/: Info.plist
ios/LinkHub/LinkHub/: ContentView.swift  LinkHubApp.swift
ios/LinkHub/LinkHub/Bridge/: RustBridge.swift
ios/LinkHub/LinkHub/Service/: BonjourService.swift
ios/LinkHub/LinkHub/UI/: DevicesView.swift  PairView.swift  SendView.swift  ServiceView.swift
ios/include/: linkhub_core.h  module.modulemap
ios/scripts/: build-core-ios.sh
scripts/: build-android-release.ps1  build-android-so.ps1  build-desktop-installer.ps1  two-device-app-test.md  two-device-test.md  verify-local-e2e.ps1
signaling-server/: Cargo.toml
signaling-server/src/: auth.rs  lib.rs  limits.rs  main.rs  protocol.rs
signaling-server/tests/: forward.rs
spike/libp2p-spike/: Cargo.toml
spike/libp2p-spike/src/: lib.rs
spike/webrtc-spike/: Cargo.toml
spike/webrtc-spike/src/: lib.rs
