[package]
name = "linkhub-core-prototype"
version = "0.1.0"
edition = "2021"

[lib]
name = "linkhub_core"
# `lib` = desktop/CLI rlib; `cdylib` = Android .so; `staticlib` = iOS .a linked
# into the app via ios/Frameworks/LinkHubCore.xcframework (see ios/README.md).
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "linkhub-cli"
path = "src/main.rs"

[features]
# Cross-network WebRTC transport (Stage 5 / M3). Off by default so the standard
# build, the Android .so, and the existing test matrix stay lean and unchanged;
# enable with `--features webrtc` to compile/test the WebRTC path.
webrtc = ["dep:webrtc", "dep:tokio", "dep:bytes"]

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
flume = "0.11.1"
mdns-sd = "0.20.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
snow = "0.9.6"
# Sync WebSocket client for the signaling server (M2-step2). default-features
# off keeps it TLS-free (ws:// only) and pure-Rust so it cross-compiles to Android.
tungstenite = { version = "0.23", default-features = false, features = ["handshake"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
# WebRTC transport, gated behind the `webrtc` feature (see [features]).
webrtc = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }
bytes = { version = "1", optional = true }

[dev-dependencies]
sha2 = "0.10.8"
# Drive the real signaling server from core's M2-step2 integration test.
linkhub-signaling-server = { path = "../signaling-server" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "4"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = { version = "0.21", features = ["invocation"] }
log = "0.4"
