[package]
name = "linkhub-core-prototype"
version = "0.1.0"
edition = "2021"

[lib]
name = "linkhub_core"
# `lib` = desktop/CLI rlib; `cdylib` = Android .so; `staticlib` = iOS .a linked
# into the app via ios/Frameworks/LinkHubCore.xcframework (see ios/README.md).
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "linkhub-cli"
path = "src/main.rs"

# Dev-only standalone TURN relay for local cross-network validation. Gated on the
# `webrtc` feature so the default build/test matrix and the Android .so are
# unaffected. Run with `cargo run --features webrtc --bin turn-dev-server`.
[[bin]]
name = "turn-dev-server"
path = "src/bin/turn_dev_server.rs"
required-features = ["webrtc"]

[features]
# Cross-network WebRTC transport (Stage 5 / M3). Off by default so the standard
# build, the Android .so, and the existing test matrix stay lean and unchanged;
# enable with `--features webrtc` to compile/test the WebRTC path.
webrtc = ["dep:webrtc", "dep:tokio", "dep:bytes"]
# Tor onion transport (Phase 2). Off by default — Arti and its ~200-crate tree
# are pulled ONLY with `--features tor`, so the default build, the Android .so,
# and the test matrix stay lean and Arti-free (mirrors the `webrtc` gating). The
# onion-address derivation (identity/onion.rs) is separate and stays in default.
tor = [
    "dep:arti-client",
    "dep:tor-rtcompat",
    "dep:tor-hsservice",
    "dep:tor-hscrypto",
    "dep:tor-llcrypto",
    "dep:tor-cell",
    "dep:safelog",
    "dep:rustls",
    "dep:futures",
    "dep:rusqlite",
    "dep:tokio",
]

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
flume = "0.11.1"
mdns-sd = "0.20.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10.8"
# SHA3-256 for the v3 onion-address checksum (Tor rend-spec-v3 §6). Small,
# pure-Rust, cross-compiles cleanly — kept in the default build so onion
# addresses can be derived without the (feature-gated) Tor transport.
sha3 = "0.10.8"
snow = "0.9.6"
# Sync WebSocket client for the signaling server (M2-step2). default-features
# off keeps it TLS-free (ws:// only) and pure-Rust so it cross-compiles to Android.
tungstenite = { version = "0.23", default-features = false, features = ["handshake"] }
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "getrandom"] }
# WebRTC transport, gated behind the `webrtc` feature (see [features]).
webrtc = { version = "0.11", optional = true }
# tokio is shared by the `webrtc` and `tor` features; features are the union
# both paths need (io-util/net added for Arti's async DataStream + bridges).
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "net"], optional = true }
bytes = { version = "1", optional = true }
# Tor onion transport (Arti), gated behind the `tor` feature (see [features]).
# rustls (not native-tls) keeps the Android cross-compile OpenSSL-free; rusqlite
# `bundled` compiles SQLite from source (NDK sysroot has no -lsqlite3);
# experimental-api unlocks launch_onion_service_with_hsid (host at our
# identity-derived key, so the onion address == identity).
arti-client = { version = "0.43", default-features = false, features = [
    "rustls",
    "tokio",
    "compression",
    "onion-service-client",
    "onion-service-service",
    "pt-client",
    "experimental-api",
], optional = true }
tor-rtcompat = { version = "0.43", default-features = false, features = ["rustls", "tokio"], optional = true }
tor-hsservice = { version = "0.43", optional = true }
tor-hscrypto = { version = "0.43", optional = true }
tor-llcrypto = { version = "0.43", optional = true }
tor-cell = { version = "0.43", optional = true }
safelog = { version = "0.8", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring"], optional = true }
futures = { version = "0.3", optional = true }
rusqlite = { version = "0.39", features = ["bundled"], optional = true }

[dev-dependencies]
sha2 = "0.10.8"
# Drive the real signaling server from core's M2-step2 integration test.
linkhub-signaling-server = { path = "../signaling-server" }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = "4"
tokio = { version = "1", features = ["rt"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = { version = "0.21", features = ["invocation"] }
log = "0.4"
