[package]
name = "linkhub-signaling-server"
version = "0.1.0"
edition = "2021"
description = "Thin WebSocket signaling server for LinkHub cross-network transport (Stage 5 / M2): Ed25519 auth, presence, store-and-forward SIGNALING. Sees metadata only, never payload plaintext."

[lib]
name = "linkhub_signaling_server"
path = "src/lib.rs"

[[bin]]
name = "linkhub-signaling-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util", "signal"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = "2.1.1"
getrandom = "0.2"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time", "io-util"] }
